# TestBoost

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .dockerignore  .env  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  INTEGRATION_VALIDATION.md  LICENSE  NOTICE  OPEN_SOURCE_AUDIT_REPORT.md  PR-DeepAgents-Integration.md  README.md  SECURITY.md  TODO.md  alembic.ini  docker-compose.monitoring.yaml  docker-compose.yaml  maven_e2e_test_output.txt  pyproject.toml
.claude/: settings.local.json  settings.local.json.example
.claude/agents/: brainstormer.md  debugger.md  general-assistant-111.md  qa-tester.md  reviewer.md
.claude/commands/: clean-commit.md  speckit.clarify.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md  testboost.analyze.md  testboost.gaps.md  testboost.generate.md  testboost.init.md  testboost.killer.md  testboost.mutate.md  testboost.status.md  testboost.validate.md  testboost.verify.md
.github/: PULL_REQUEST_TEMPLATE.md  README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci-tests.yml  ci.yml  impact-check.yml  secret-scanning.yml
.opencode/commands/: testboost.analyze.md  testboost.gaps.md  testboost.generate.md  testboost.init.md  testboost.status.md  testboost.validate.md
.specify/memory/: constitution.md
config/agents/: deployment_agent.yaml  maven_maintenance_agent.yaml  test_gen_agent.yaml
config/alertmanager/: alertmanager.yml
config/prometheus/: alerts.yml  prometheus.yml
docker/maven-builder/: Dockerfile
docs/: README.md  api-authentication.md  api-errors.md  architecture.md  cahier-de-tests.md  ci-async-integration.md  cli-reference.md  configuration.md  contributor-quickstart.md  database-schema.md  dependencies.md  docker-isolation.md  getting-started.md  gitlab-integration.md  llm-cost-analysis.md  llm-providers.md  logging-gaps-analysis.md  maven-maintenance.md  mcp-tools-reference.md  monitoring-setup.md  mvp-plan.md  operations.md  prompts.md  session-format.md  test-generation.md  testing-strategy.md  traceability.md  user-guide.md  workflow-diagrams.md  workflow.md
docs/testing/: manual-test-checklist.md  smoke-test-protocol.md  test-scenarios.md
scripts/: detect_unlogged_exceptions.py  find_dead_code.py  tb-analyze.ps1  tb-analyze.sh  tb-gaps.ps1  tb-gaps.sh  tb-generate.ps1  tb-generate.sh  tb-init.ps1  tb-init.sh  tb-killer.ps1  tb-killer.sh  tb-mutate.ps1  tb-mutate.sh  tb-status.ps1  tb-status.sh  tb-validate.ps1  tb-validate.sh  tb-verify.ps1  tb-verify.sh  validate_multi_provider.py
scripts/gitlab/: fetch_answer_from_mr.sh  post_question_to_mr.sh
specs/001-simplify-testboost/: tasks.md
specs/001-testboost-core/: checklist.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks-gaps.md  tasks.md
specs/002-deepagents-integration/: agent-checklist-mapping.md  data-model.md  implementation-status.md  phase2-complete.md  phase2-findings.md  phase4-5-6-complete.md  phase7-complete.md  plan.md  progress-summary.md  quickstart.md  research.md  spec.md  tasks.md  verification-report.md
specs/003-impact-analysis-testing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-test-plan-documentation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-coverage-improvement/: spec.md
specs/006-file-modifications-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks-workflow-doc-sync.md  tasks.md
specs/007-session-events-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-opensource-release/: github-labels-setup.md  implementation-summary.md  plan.md  research.md  secret-scan-report.md  security-incident-report.md  spec.md  tasks.md
specs/testboost/: spec.md
src/agents/: adapter.py  loader.py
src/api/: main.py
src/cli/: constants.py  exit_codes.py  formatters.py  main.py  progress.py
testboost/: __init__.py  __main__.py
testboost_lite/: README.md  __init__.py  __main__.py
tests/: __init__.py  conftest.py
(+337 files in other folders)
