[tool.poetry]
name = "testboost"
version = "0.2.0"
description = "AI-powered Java test generation CLI (TestBoost Lite)"
authors = ["TestBoost Team"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "src"}, {include = "testboost_lite"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.12"
pydantic-settings = "^2.7"
langgraph = "^1.0"
langchain = "^1.0"
langchain-core = "^1.1"
langchain-google-genai = "^4.0"
langchain-anthropic = "^1.1"
langchain-openai = "^1.0"
mcp = "^1.22"
deepagents = "^0.4"
typer = "^0.24"
httpx = "^0.28"
structlog = "^25.5"
greenlet = "^3.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
pytest-benchmark = "^5.1"
pytest-xdist = "^3.5"
pytest-rerunfailures = "^14.0"
black = "^24.10"
ruff = "^0.11"
mypy = "^1.13"
types-PyYAML = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "SIM102", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.venv
  | venv
  | __pycache__
  | \.git
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --durations=50 --durations-min=0.01"
markers = [
    "unit: mark test as unit test",
    "integration: mark test as integration test",
    "e2e: mark test as end-to-end test",
    "slow: mark test as slow-running",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
branch = true
source = ["src", "testboost_lite"]
omit = ["*/tests/*", "*/__pycache__/*"]
[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 0
